--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "2.5.1",
     "d3": "^4.9.1",
     "essence-ng2-print": "^1.1.0",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "moment": "2.19.1",
     "ngx-bootstrap": "1.9.3",
@@ -41,6 +42,7 @@
     "simple-line-icons": "^2.4.1",
     "tinymce": "^4.7.11",
     "ts-helpers": "1.1.2",
+    "xlsx": "^0.13.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
