--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "font-awesome": "^4.7.0",
     "moment": "2.19.1",
     "ngx-bootstrap": "1.9.3",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "5.4.3",
     "simple-line-icons": "^2.4.1",
     "tinymce": "^4.7.11",
